refactor: unmodifiableList로 개선